<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Advanced2Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="181dp"
        android:background="#C6C9CE"
        android:text="@string/r_seau"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="181dp"
        android:text="@string/luminosit"
        android:textColor="#FFFFFF"
        android:background="#C6C9CE"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="297dp"
        android:layout_height="23dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="181dp"
        android:text="@string/couleurs"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="#C6C9CE"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>